--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" href="logo.png" type="image/icon type">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Weather forecast</title>
+    <title>Weather Forecast</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
 </head>
@@ -39,6 +40,11 @@
             </div>
             <div class="humidity">Humidity: 60%</div>
             <div class="wind">Wind Speed: 6.2km/h</div>
+        </div>
+        <div>
+            <br>
+            <a href="moredetails.html" style="text-decoration:none; color: aliceblue;"><i class="fa fa-info-circle"
+                    aria-hidden="true"></i> Get more details </a>
         </div>
     </div>
 </body>
